# 2020_rover

controls/: CMakeLists.txt  package.xml
controls/launch/: default.launch
controls/src/: arucoo.cpp  box.cpp  gpss.cpp  hard.cpp
obstac/: CMakeLists.txt  package.xml
obstac/launch/: default.launch
obstac/src/: path.cpp
rover_control/: CMakeLists.txt  package.xml
rover_control/launch/: default.launch
rover_control/src/: hard.cpp
rover_sim/launch/: default.launch
rover_sim/rviz/: default.rviz
rover_sim/worlds/: aruco.world
